--- a/.github/workflows/ninja-build.yml
+++ b/.github/workflows/ninja-build.yml
@@ -71,14 +71,14 @@ jobs:
         # tar -C 'D:\whatever' does not seem to work
         ARTIFACT_EXTRACT_CMDLINE: funzip | zstd -d -c
           | { cd '${{ runner.temp }}' && tar -xf - ; }
-        FORCE_BRANCH: ${{ env.BRANCH }}
+        FORCE_BRANCH: actions_upload_artifacts # ${{ env.BRANCH }}
       run: |
         pip install pyyaml
         python ./qt5/ci_scripts/list_dependencies.py -i source/dependencies.yaml | xargs -n2 bash ./qt5/ci_scripts/fetch_github_artifact_and_run_command.sh
 
     - name: git submodule update
       working-directory: source
-      run: git submodule update --init --recursive
+      run: '[ "$GITHUB_REPO_NAME" = qtquick3d ] && git submodule update --init --recursive || true'
     - name: configure
       working-directory: build
       run: "'${{ runner.temp }}'/install_dir/bin/qt-cmake-private${{ env.BAT_EXTENSION }}  ../source"
